# Noto

./: .gitignore  .tmp-failing-test-note  CLAUDE.md  CONTRIBUTING.md  LICENSE  Package.resolved  Package.swift  README.md  SECURITY.md  appcast.xml
.claude/: launch.json
.github/workflows/: ci.yml  codeql.yml  release.yml
Checks/NotoCoreChecks/: AIRecorderModelChecks.swift  AppStateBehaviorChecks.swift  CheckSupport.swift  GraphBuilderChecks.swift  MarkdownEditorChecks.swift  MarkdownParserChecks.swift  MetadataCacheBuilderChecks.swift  MockVaultChecks.swift  ModelAPIChecks.swift  NoteActionsChecks.swift  NotePreviewSummaryChecks.swift  PackageSmokeChecks.swift  main.swift
Sources/Noto/: AppState.swift  AppUpdateService.swift  NotoApp.swift  UpdaterController.swift
Sources/NotoCore/: NotoCore.swift
Tests/NotoCoreTests/: AIRecorderModelTests.swift  AppStateBehaviorTests.swift  GraphBuilderTests.swift  MarkdownEditorTests.swift  MarkdownParserTests.swift  MetadataCacheBuilderTests.swift  MockVaultTests.swift  (+5 more)
docs/: releases.md
landing/: .env.example  .gitignore  README.md  app.html  download.html  eslint.config.js  features.html  get-started.html  index.html  package-lock.json  package.json  tsconfig.server.json  vite.config.app.ts  vite.config.ts  vitest.config.ts
noto-mcp/: package-lock.json  package.json  tsconfig.json
packaging/pypi/: .gitignore  README.md  pyproject.toml
packaging/pypi/noto_app/: __init__.py  cli.py  node_runtime.py  paths.py
packaging/pypi/tests/: test_cli.py  test_node_runtime.py  test_paths.py
scripts/: package-noto-dmg.sh
(+420 files in other folders)
